# IoT

./: .gitignore  .tmp-cookies.txt  README.md  package-lock.json  package.json
dashboard/: .env.example  .tmp-cookies-live.txt  .tmp-cookies.txt  iot_cmd.js  package-lock.json  package.json  server.js
dashboard/config/: database.js  device.js  onboarding.js  swagger.js
dashboard/middleware/: auth.js  errorHandler.js
dashboard/public/: manifest.json  sw.js
dashboard/routes/: androidBridgeAdapter.js  api.js  apiKeys.js  auth.js  automation.js  calls.js  contacts.js  deviceGroups.js  devices.js  gpio.js  index.js  intercom.js  location.js  logs.js  modem.js  mqtt.js  onboarding.js  ota.js  queue.js  settings.js  sms.js  status.js  storage.js  test.js  users.js  ussd.js  webhooks.js
dashboard/services/: automationEngine.js  hostHotspotService.js  logCleanupService.js  modemService.js  mqttHandlers.js  mqttService.js  n8nService.js  notificationService.js  smsCache.js  (+12 more)
firmware/espidf/esp32-s3-a7670e/components/device_status/: CMakeLists.txt
firmware/espidf/esp32-s3-a7670e/components/device_status/include/: device_status.h
firmware/espidf/esp32-s3-a7670e/components/device_status/src/: device_status.c
firmware/espidf/esp32-s3-a7670e/components/modem_a7670/: CMakeLists.txt
firmware/espidf/esp32-s3-a7670e/components/modem_a7670/include/: modem_a7670.h
firmware/espidf/esp32-s3-a7670e/components/modem_a7670/src/: modem_a7670.c  modem_a7670_internal.h  modem_a7670_telephony.c
firmware/espidf/esp32-s3-a7670e/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
(+280 files in other folders)
